[package]
name = "the_biZZare"
version = "0.1.0"
edition = "2018"

[dependencies]
libp2p = { version = "0.43" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
async-trait = "0.1"
futures = "0.3"
